java-chart/Kyverno/kyvernolabels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-security-for-java-app
spec:
  validationFailureAction: enforce
  rules:
    - name: require-security-context
      match:
        resources:
          kinds:
            - Pod
          selector:
            matchLabels:
              app: java-app
      validate:
        message: "Security context must be set for java-app pods."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
                  allowPrivilegeEscalation: false
